--- a/main.html
+++ b/main.html
@@ -58,7 +58,9 @@
     </div>
     
     <nav class="navbar">
-        <div class="logo">Byjus Revived</div>
+        <div class="logo">
+            <img src="logo.png" alt="Brand Logo">
+        </div>
         <ul class="nav-links">
             <li><a href="#">Home</a></li>
             <li><a href="#">Courses</a></li>
